# minimax_tic_tac_toe

./: CMakeLists.txt  README.md  main.cpp
curses_implementation/: curses_game.cpp  curses_game.hpp
minimax_algorithm/: minimax_algorithm.cpp
stdio_implementation/: tic_tac_toe.cpp  tic_tac_toe.hpp
